# orchestre

./: .env.sample  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  main.py  package-lock.json  pyproject.toml  requirements.txt  worker.py
agents/: commerce_agent.py  tools.py
apis/: agent.py  bots.py  commerce.py  fulfillment.py  messages.py  optimization.py  providers.py  route.py  stores.py  users.py  webhooks.py
automation/fulfillment/: engine.py
core/: config.py
core/auth/: token_cache.py
core/bot/: autobot.py
core/loader/: loader.py
core/queue/: tasks.py  worker.py
core/task/: task.py
core/utils/: http.py  log.py  message.py  timestamp.py
db/: firebase.py  postgres.py
db/cruds/: stores.py  users.py
db/models/: commerce.py
db/schemas/: users.py
helpers/: forms.py
optimization/ads/: amazon_ads.py  google_ads.py  meta_ads.py
optimization/customer_support/: handler.py
optimization/inventory/: restock.py
optimization/repricing/: engine.py
products/: base.py  pinecone.py
providers/: base.py  bridge.py
providers/plugins/amazon/: amazon.py
providers/plugins/dummy/: dummy.py
providers/plugins/gmail/: gmail.py
providers/plugins/shopify/: shopify.py
schemas/: commerce.py
services/fulfillment/: carriers.py
services/llm/: services.py
services/notifications/: notifier.py
tests/: conftest.py  test_api.py
