[tool.poetry]
name = "orchestre"
version = "0.1.0"
description = ""
authors = ["Matthieu <matthieu.moullec.perso@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
python-jose = "^3.3.0"
bcrypt = "^4.0.1"
uvicorn = "^0.22.0"
python-dotenv = "0.21.1"
passlib = "1.7.4"
certifi = "2023.5.7"
python-multipart = "0.0.6"
click = "8.1.3"
colorama = "0.4.6"
cryptography = "40.0.2"
httptools = "0.5.0"
dnspython = "2.3.0"
anyio = "3.6.2"
ecdsa = "0.18.0"
email-validator = "2.0.0.post2"
greenlet = "2.0.2"
h11 = "0.14.0"
httpcore = "0.17.1"
httpx = "0.24.1"
idna = "3.4"
importlib-metadata = "6.6.0"
itsdangerous = "2.1.2"
pyasn1 = "0.5.0"
pycparser = "2.21"
pydantic = "1.10.7"
pyyaml = "6.0"
rsa = "4.9"
six = "1.16.0"
sniffio = "1.3.0"
typing-extensions = "4.5.0"
firebase-admin = "^6.1.0"
pyrebase4 = "^4.7.0"
requests-toolbelt = "0.10.1"
google-api-python-client = "^2.87.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^1.0.0"
simple-classproperty = "^3.0.0"
authlib = "^1.2.0"
starlette = "^0.27.0"
gunicorn = "^20.1.0"
langchain = "^0.0.189"
openai = "^0.27.7"
runpod = "^0.8"
jinja2 = "^3.1.2"
pandas = "1.5.3"
pinecone-client = "^2.2.2"
numpy = "^1.25.1"
imageio = {extras = ["ffmpeg"], version = "^2.31.1"}
pillow = "^10.0.0"
aiohttp = "^3.8.5"

[tool.poetry.dev-dependencies]
coverage = { version = "5.0.3", extras = ["toml"]}
black = "^23.3.0"
isort = { version = "^4.3.21", extras = ["pyproject"]}
requests = "^2.23.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
httpx = "^0.24.1"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.black]
# https://github.com/psf/black
line-length = 88
target_version = ['py38']
exclude = '''
(
  /(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | htmlcov
    | venv
    | .venv
  )/
)
'''

[tool.isort]
# https://github.com/timothycrosley/isort
# https://github.com/timothycrosley/isort/wiki/isort-Settings
line_length = 88
indent = '    '
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
skip = [".gitignore", ".dockerignore", "tests/conftest.py"]

[tool.coverage]
# https://github.com/nedbat/coveragepy
    [tool.coverage.run]

    source = ["app"]
    branch = true
    omit = ['']

    [tool.coverage.report]
    exclude_lines = [
        "# noqa",
        "raise NotImplementedError"
    ]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
