[tool.poetry]
name = "orchestre"
version = "0.2.0"
description = "AI-powered e-commerce automation platform"
authors = ["Matthieu <matthieu.moullec.perso@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = ">=3.11,<3.13"

# Web framework
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
gunicorn = "^21.2.0"
python-multipart = "^0.0.6"
itsdangerous = "^2.1.2"

# Pydantic v2
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

# Database - async Postgres
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
asyncpg = "^0.29.0"
alembic = "^1.13.0"

# Job queue (replaces in-memory TaskManager)
arq = "^0.25.0"
redis = "^5.0.1"

# Auth & security
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
authlib = "^1.2.0"
cryptography = "^41.0.0"

# Firebase (user auth via firebase-admin + REST API)
firebase-admin = "^6.2.0"

# HTTP client (async)
httpx = "^0.25.0"
aiohttp = "^3.9.0"

# Google / Gmail
google-api-python-client = "^2.108.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^1.1.0"

# LLM - modern versions
langchain = "^0.2.0"
langchain-openai = "^0.1.0"
langchain-community = "^0.2.0"
openai = "^1.6.0"

# Vector store
pinecone-client = "^3.0.0"

# Utilities
python-dotenv = "^1.0.0"
simple-classproperty = "^3.0.0"
pandas = "^2.1.0"
numpy = "^1.26.0"
python-dateutil = "^2.8.2"
pytz = "^2023.3"
jinja2 = "^3.1.2"

# Amazon Advertising
boto3 = "^1.34.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.25.0"
black = "^23.11.0"
isort = "^5.12.0"
coverage = {version = "^7.3.0", extras = ["toml"]}

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target_version = ["py311"]

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.coverage.run]
source = ["app"]
branch = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
